Fixed bug that would sometimes arise on tabs, not spacing them correctly

--- a/shell.css
+++ b/shell.css
@@ -199,6 +199,8 @@ ul
 {
     list-style: none;
     display: inline-block;
+    margin-left: 3px;
+    margin-right: 3px;
 }
 
 .tab-links a
